--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <p align="center">
                 <name>Udaikaran Singh</name>
               </p>
-              <p>Hi, I am currently a student at UCSD studying <a href="https://datascience.ucsd.edu/">CSE </a>. I'm going to cumpiledriver your Mom.
+              <p>Hi, I am currently a student at UCSD studying <a href="https://datascience.ucsd.edu/"> Data Science </a>.
               </p>
               <p>
                 2nd part of my summary here
