changed font size a little bit

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
               <p>
                 The main issues associated with this dataset is the sparsity of the labels. In most cases, a person does not have a disease, and some diseases are very rare in the dataset. This means that the dataset suffers from a sparse signal and high levels of data imbalance. To solve this issue, I attempted to use a weighted loss function that gives more weight to the diseases that are less common in the dataset.
               </p>
-              <p align="center">
-                <a href="blog/x_ray_post.html"> post </a> / <a href="https://github.com/UdaikaranSingh/CNN-X-ray-classification"> GitHub </a>
+              <p align="center" style="font-size: 14px">
+                <a href="blog/x_ray_post.html" style="font-size: 14px"> Post </a> / <a href="https://github.com/UdaikaranSingh/CNN-X-ray-classification" style="font-size: 14px"> GitHub </a>
               </p>
                 
             </td>
