--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           </tr>
 
 
-
+          <!-- X-Ray Classification Post --->
           <tr>
             <td id = "image" width = "50%">
               <a href="google.com"> 
@@ -144,12 +144,34 @@
                 The main issues associated with this dataset is the sparsity of the labels. In most cases, a person does not have a disease, and some diseases are very rare in the dataset. This means that the dataset suffers from a sparse signal and high levels of data imbalance. To solve this issue, I attempted to use a weighted loss function that gives more weight to the diseases that are less common in the dataset.
               </p>
               <p align="center" style="font-size: 14px">
-                <a href="blog/x_ray_post.html" style="font-size: 14px"> Post </a> / <a href="https://github.com/UdaikaranSingh/CNN-X-ray-classification" style="font-size: 14px"> GitHub </a>
+                <a href="blog/x_ray_post.html" style="font-size: 14px"> Post </a> / <a href="https://github.com/UdaikaranSingh/CNN-X-ray-classification" style="font-size: 14px"> GitHub </a> / 7-30-2019
               </p>
                 
             </td>
           </tr>
 
+          <!-- Beer Review Generator --->
+          <tr>
+            <td id = "image" width = "50%">
+              <a href="blog/beer_review_post.html"> 
+                <img src="images/char_rnn.jpeg", alt = "MNIST", style="width:400px;height:300px;border:0;">
+              </a>
+            </td>
+            <td width="50%">
+              <a href="blog/beer_review_post.html">
+                <h1 align="center"> Beer Review RNN </h1>
+              </a>
+              <p>
+                The NIH X-Ray dataset is one of the largest public datasets for machine learning on medical data. For this problem, I trained a convolutional neural network to diagnose only based on the X-ray image.
+              </p>
+              <p>
+                The main issues associated with this dataset is the sparsity of the labels. In most cases, a person does not have a disease, and some diseases are very rare in the dataset. This means that the dataset suffers from a sparse signal and high levels of data imbalance. To solve this issue, I attempted to use a weighted loss function that gives more weight to the diseases that are less common in the dataset.
+              </p>
+              <p align="center" style="font-size: 14px">
+                <a href="blog/beer_review_post.html" style="font-size: 14px"> Post </a> / <a href="https://github.com/UdaikaranSingh/RNN-Beer-Review-Generator" style="font-size: 14px"> GitHub </a> / 8-6-2019
+              </p>
+            </td>
+          </tr>
 
 
 
