--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 I then used this network trained on Hamlet to generate text. In theory, this generates text representative of a piece of text within Hamlet.
               </p>
               <p align="center" style="font-size: 14px">
-                <a href="https://nbviewer.jupyter.org/github/UdaikaranSingh/shakespeare_rnn/blob/master/main.ipynb" style="font-size: 14px"> Notebook </a> / <a href="https://github.com/UdaikaranSingh/shakespeare_rnn" style="font-size: 14px"> GitHub </a> / 8-6-2019
+                <a href="UdaikaranSingh/shakespeare_rnn/blob/master/main.ipynb" style="font-size: 14px"> Notebook </a> / <a href="https://github.com/UdaikaranSingh/shakespeare_rnn" style="font-size: 14px"> GitHub </a> / 8-6-2019
               </p>
             </td>
           </tr>
