bolded the title

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
 
         <!-- Experience Table-->
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
-          <tr>
+          <tr></tr>>
             <td width="50%" valign="middle">
-              <heading>Experience</heading>
+              <H1>Experience</H1>
             </td>
           </tr>
 
@@ -191,7 +191,7 @@
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
           <tr>
             <td width="50%" valign="middle">
-              <heading>Projects</heading>
+              <H1>Projects</H1>
             </td>
           </tr>
 
